# MLA-Project

./: .gitignore  Prediction of Nighttime NO2 Using PGN and TEMPO.docx  main.py  pyproject.toml  ~$ediction of Nighttime NO2 Using PGN and TEMPO.docx  ~WRL3310.tmp
Assignment2/: ChatGPTLog.txt  IST5535_ClusteringAndPCA_[NathanJester] (CodingDay2 and Assignment2).ipynb  notes.md
Assignment3/: Assignment3.ipynb  ChatGPTLog.txt  Predictive_Models.ipynb
Assignment4/: Assignment4.docx  Assignment4.ipynb  ChatGPTLog.txt
Project/: .dodsrc  ASDC_Data_Processing_ML_v1.2.ipynb  Data_Getter.ipynb  NighttimeNO2Prediction.ipynb  TEMPO_Nighttime_NO2_Prediction.ipynb  Things to try.md  all-pgn-sites.txt
