[project]
name = "mla"
version = "0.1.0"
description = "Environment setup to support the TEMPO Nighttime NO2 Prediction notebook."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "earthaccess>=0.15.1",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "harmony-py>=1.3.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "netcdf4>=1.7.3",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pyproj>=3.7.2",
    "pyrsig>=0.10.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shapely>=2.0.7",
    "yellowbrick>=1.5",
]
